<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:title="@string/back"
        android:id="@+id/back"
        android:icon="@drawable/ic_replay"
        app:showAsAction="always">
    </item>
    <item android:title="@string/erase"
        android:id="@+id/erase"
        android:icon="@drawable/ic_erase"
        app:showAsAction="always">
    </item>
    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="never">

    </item>


    <item
        android:id="@+id/new_game"
        android:title="@string/new_game"
        android:icon="@drawable/ic_settings"
        app:showAsAction="never">

    </item>

    <item
        android:id="@+id/help"
        android:title="@string/help"
        android:icon="@drawable/ic_settings"
        app:showAsAction="never">

    </item>
</menu>