<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:text="@string/title2"
        android:layout_margin="@dimen/margin"
        />
    <TextView
        android:id="@+id/gifselcell"
        android:layout_margin="@dimen/margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:text="@string/text2_1"
        />
    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/my_image_view"
        android:layout_width="110dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="110dp"
        />
    <TextView
        android:layout_margin="@dimen/margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:text="@string/text2_2"
        />
    <ImageView
        android:layout_gravity="center"
        android:layout_width="@dimen/gridImage"
        android:layout_height="60dp"
        android:src="@drawable/buttons"/>
    <TextView
        android:layout_margin="@dimen/margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:text="@string/text2_3"
        />
    <ImageView
        android:layout_gravity="center"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:src="@drawable/rever"/>
</LinearLayout>