<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:text="@string/title3"
        android:layout_margin="@dimen/margin"
        />
    <TextView
        android:layout_margin="@dimen/margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:text="@string/text3_1"
        />
    <ImageView
        android:layout_gravity="center"
        android:layout_width="170dp"
        android:layout_height="120dp"
        android:src="@drawable/opensettings"/>
    <TextView
        android:layout_margin="@dimen/margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:text="@string/text3_2"
        />
    <ImageView
        android:layout_gravity="center"
        android:layout_width="170dp"
        android:layout_height="120dp"
        android:src="@drawable/startnewgame"/>

</LinearLayout>